@@ -53,7 +53,6 @@ int __stdcall GetModuleHandleExW(unsigned int, const char *, void *);
 #define TclWinGetTclInstance winGetTclInstance
 #define TclWinNToHS winNToHS
 #define TclWinSetSockOpt winSetSockOpt
-#define TclpGetTZName pGetTZName
 #define TclWinNoBackslash winNoBackslash
 #define TclWinSetInterfaces (void (*) (int)) doNothing
 #define TclWinAddProcess (void (*) (void *, unsigned int)) doNothing
@@ -94,16 +93,6 @@ TclWinSetSockOpt(void *s, int level, int optname,
 	    const char *optval, int optlen)
 {
     return setsockopt((int) s, level, optname, optval, optlen);
-}
-
-static char *
-TclpGetTZName(int isdst)
-{
-    ThreadSpecificData *tsdPtr = TCL_TSD_INIT(&dataKey);
-    const char *zone = getenv("TZ");
-    Tcl_ExternalToUtf(NULL, NULL, zone, strlen(zone), 0, NULL,
-	    tsdPtr->tzName, sizeof(tsdPtr->tzName), NULL, NULL, NULL);
-    return tsdPtr->tzName;
 }
 
 static char *
@@ -172,7 +161,6 @@ Tcl_WinTCharToUtf(
 #   define TclWinNToHS (unsigned short (*) _ANSI_ARGS_((unsigned short ns))) TclpMakeFile
 #   define TclWinSetSockOpt (int (*) _ANSI_ARGS_((void *, int, int, const char *, int))) TclpOpenFile
 #   define TclWinAddProcess 0
-#   define TclpGetTZName 0
 #   define TclWinNoBackslash 0
 #   define TclWinSetInterfaces 0
 #   define TclWinFlushDirtyChannels 0
@@ -280,7 +268,7 @@ static const TclIntStubs tclIntStubs = {
     TclpGetClicks, /* 75 */
     TclpGetSeconds, /* 76 */
     TclpGetTime, /* 77 */
-    TclpGetTimeZone, /* 78 */
+    0, /* 78 */
     0, /* 79 */
     0, /* 80 */
     TclpRealloc, /* 81 */
@@ -482,7 +470,7 @@ static const TclIntPlatStubs tclIntPlatStubs = {
     TclWinAddProcess, /* 20 */
     0, /* 21 */
     TclpCreateTempFile, /* 22 */
-    TclpGetTZName, /* 23 */
+    0, /* 23 */
     TclWinNoBackslash, /* 24 */
     0, /* 25 */
     TclWinSetInterfaces, /* 26 */
@@ -516,7 +504,7 @@ static const TclIntPlatStubs tclIntPlatStubs = {
     TclWinAddProcess, /* 20 */
     0, /* 21 */
     TclpCreateTempFile, /* 22 */
-    TclpGetTZName, /* 23 */
+    0, /* 23 */
     TclWinNoBackslash, /* 24 */
     0, /* 25 */
     TclWinSetInterfaces, /* 26 */
@@ -548,7 +536,7 @@ static const TclIntPlatStubs tclIntPlatStubs = {
     TclWinAddProcess, /* 20 */
     0, /* 21 */
     TclpCreateTempFile, /* 22 */
-    TclpGetTZName, /* 23 */
+    0, /* 23 */
     TclWinNoBackslash, /* 24 */
     0, /* 25 */
     TclWinSetInterfaces, /* 26 */
