@@ -1,3 +1,12 @@
+2012-04-??  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclInt.decls:      [Bug 3514475]: remove TclpGetTimeZone
+	* generic/tclIntDecls.h:     and TclpGetTZName
+	* generic/tclIntPlatDecls.h:
+	* generic/tclStubInit.c:
+	* unix/tclUnixTime.c:
+	* unix/tclWinTilemc:
+
 2012-04-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	IMPLEMENTATION OF TIP#396.
